<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <EditTextPreference
      android:defaultValue="@string/pref_host_default"
      android:key="@string/pref_host"
      android:summary="@string/pref_host_summary"
      android:title="@string/pref_host_title"/>

  <EditTextPreference
      android:defaultValue="@string/pref_port_default"
      android:digits="1234567890"
      android:inputType="phone"
      android:key="@string/pref_port"
      android:numeric="integer"
      android:summary="@string/pref_port_summary"
      android:title="@string/pref_port_title"/>

  <EditTextPreference
      android:defaultValue="@string/pref_path_default"
      android:key="@string/pref_path"
      android:summary="@string/pref_path_summary"
      android:title="@string/pref_path_title"/>

</PreferenceScreen>
