<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <EditText
        android:id="@+id/isbn_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/isbn_text_hint"
        android:inputType="phone"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="initiateScan"
        android:src="@drawable/scan"/>

    <Button
        android:id="@+id/go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="fetchTradeInData"
        android:text="@string/button_go"/>

  </LinearLayout>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="6dp"
      android:layout_marginTop="6dp"
      android:orientation="horizontal">

    <TextView
        android:id="@+id/totals_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:text="@string/total_txt"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profit_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_toRightOf="@id/totals_txt"
        android:textColor="#333399"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/trade_in_value_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:textColor="#339933"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/purchase_price_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_toLeftOf="@id/trade_in_value_total"
        android:textColor="#993333"
        android:textSize="18dp"
        android:textStyle="bold"/>

  </RelativeLayout>

  <View
      android:layout_width="fill_parent"
      android:layout_height="1dip"
      android:background="#000000"/>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <ListView
        android:id="@+id/tradein_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="false"/>

  </LinearLayout>

</LinearLayout>
